<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/btn_chat"
            style="@style/selections"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:id="@+id/nickname"
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/me_name" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_pm"
            style="@style/PartStyle"
            android:text="@string/me_message" />

        <Button
            android:id="@+id/btn_favored"
            style="@style/PartStyle"
            android:text="@string/me_favor" />

        <Button
            android:id="@+id/btn_submitted"
            style="@style/PartStyle"
            android:text="@string/me_submmitted" />

        <Button
            android:id="@+id/btn_replyed"
            style="@style/PartStyle"
            android:text="@string/me_rplied" />

    </LinearLayout>

</ScrollView>