<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_about_us"
            style="@style/selections"
            android:text="@string/set_aboutus" />

        <LinearLayout
            android:id="@+id/wifi"
            style="@style/selections"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/wifi_state"
                style="@style/text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.95"
                android:text="@string/set_wifiUpdate" />

            <com.wutnews.assistance.SwitchView
                android:id="@+id/switch_wifi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:orientation="vertical" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/noti"
            style="@style/selections"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/noti_broad"
                style="@style/text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.95"
                android:text="@string/set_noti" />

            <com.wutnews.assistance.SwitchView
                android:id="@+id/switch_noti"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:orientation="vertical" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
